small overview of blockchain

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
       "private": true,
       "scripts": {},
       "dependencies": {
-            "crypto-js": "^4.1.1"
+            "crypto-js": "^4.1.1",
+            "elliptic": "^6.5.4"
       }
 }
